# tom-and-jerry-vgg

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
ai-project/: project.ipynb
